# The_Crewmates_Repo

components/arduino/libraries/ESP32-SharpIR/src/: ESP32SharpIR.cpp
main/: CMakeLists.txt  IR_PID  IR_algorithm  IR_sensor.cpp  PID3.cpp  PIDACTUALLYWORKS.cpp  PID_new_should_work.cpp  PID_test.cpp  QTR_Controller.cpp  anotherPID-)  anotherPID-).cpp  arduino_main.cpp  bluetooth_connector.cpp  modeController.cpp
main/Arduino Files/: motor_controller.ino
main/Arduino Files/ESP32-SharpIR/src/: ESP32SharpIR.cpp
main/Arduino Files/PID/: PID.ino
main/Arduino Files/QTRSensor/: QTRSensor.ino
main/Arduino Files/bluetooth_motor_10_19/: bluetooth_motor_10_19.ino
main/Arduino Files/modeandcolorandwall/: modeandcolorandwall.ino
main/Arduino Files/modetest/: modetest.ino
main/Arduino Files/motortest/: motortest.ino
main/Arduino Files/oldPID/: PID.ino  PID3.cpp  PID_new_should_work.cpp
main/Arduino Files/onlywallandcolor/: onlywallandcolor.ino
main/motor_controller.cpp/: motor_controller.ino
main/motor_controller.cpp/PID/: PID.ino
main/motor_controller.cpp/QTRSensor/: QTRSensor.ino
main/robotathon-circuit-design/: Main_Cirkit.ckt  fp-info-cache  robotathon.kicad_prl  robotathon.kicad_pro  robotathon.kicad_sch
main/solidworks files/: Chasis (1).SLDPRT  Fixed_Design (1).SLDASM  Mount (1).SLDPRT  Rail.SLDPRT  breadboard.SLDPRT  linesensorholder.SLDPRT  motor.SLDPRT  omniroller.SLDPRT  ~$Chasis (1).SLDPRT
